--- a/quizGame/index.html
+++ b/quizGame/index.html
@@ -17,6 +17,26 @@
                 </a>
             </button>
         </div>
+        <div class="container">
+            <div class="quiz-box">
+                <div id="quiz">
+                    <h1>JavaScript Quiz App</h1>
+                    <div class="quiz-header">
+                        <p id="progress">Question x of y</p>
+                        <p id="count-down"></p>
+                    </div>
+                    <p id="question"></p>
+    
+                    <div class="buttons">
+                        <button class="btn" id="btn0">A. <span id="choice0"></span></button>
+                        <button class="btn" id="btn1">B. <span id="choice1"></span></button>
+                        <button class="btn" id="btn2">C. <span id="choice2"></span></button>
+                        <button class="btn" id="btn3">D. <span id="choice3"></span></button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
+    <script src="./quizGame.js"></script>
 </body>
 </html>
