implement_Todo-List-App

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="import" href="/nav/nav.html"> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -17,10 +18,10 @@
             </div>
             <ul class="navbar__root">
                 <li><a href="#">About</a></li>
-                <li><a href="">My Skills</a></li>
-                <li><a href="">Pet Projects</a></li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">Blog</a></li>
+                <li><a href="#">My Skills</a></li>
+                <li><a href="#">Pet Projects</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Blog</a></li>
             </ul>
             <div class="navbar__contact-icons">
                 <a href=""><i class="fa fa-linkedin"></i></a>
@@ -72,7 +73,7 @@
             </section>
             
         </div>
-        <img src="/images/circle.png" alt="">
+        <!-- <img src="/images/circle.png" alt=""> -->
         <!-- <img src="./images/weather-quiz-unsmushed.png" alt="">  -->
     </main>
     <script type="module" src="./src/index.js"></script>
